--- a/Beyond/Beyond.csproj
+++ b/Beyond/Beyond.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Discord.Net" Version="3.8.1" />
     <PackageReference Include="dotenv.net" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
